--- a/dashboard.html
+++ b/dashboard.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Vehicle Dealer System</title>
+        <title>Produts System</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">ProcesosUFPSO</a>
+              <a class="navbar-brand" href="#">ExamenProcesos</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -30,14 +30,14 @@
           <div class="container-fluid">
             <div class="card">
                 <div class="card-header">
-                  <h1>Bienvenido!!! </h1>
+                  <h1>Welcome!!! </h1>
                 </div>
                 <div class="card-body">
                   
                   <div id="datos"></div>
 
                   <div class="p-3 mb-2 bg-light text-dark">
-                    <h1 class="display-5"><i class="fa-solid fa-list"></i> Listado de usuarios</h1>
+                    <h1 class="display-5"><i class="fa-solid fa-list"></i> Users List</h1>
                   </div>
                   
                   <a href="#" onclick="registerForm()" class="btn btn-outline-success"><i class="fa-solid fa-user-plus"></i></a>
@@ -70,7 +70,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Gestion de usuarios</h5>
+                <h5 class="modal-title" id="exampleModalLabel">User Management</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body" id="contentModal">
@@ -84,7 +84,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title">Desea eliminar el registro?</h5>
+                <h5 class="modal-title">Do you like register delete?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body" id="contenidoConfirmacion">
